# llm-semantic-book-recommender

./: .gitignore  .venv  data-exploration.ipynb  pyproject.toml  requirements_flexible.txt  sentiment-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
